<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WavesSound">

    <EditText
        android:id="@+id/velocitySourceInput"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/btn_default"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/waves_wave_velocity_input"
        app:layout_constraintStart_toEndOf="@+id/sss1"
        app:layout_constraintTop_toBottomOf="@+id/velocityInput" />

    <TextView
        android:id="@+id/sss1"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/waves_wave_velocity_source"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/velocityimage" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="ChooseReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/questionmark" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="132dp"
        android:text="@string/waves_sound_lambda"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lambdaInput"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="132dp"
        android:background="@android:drawable/btn_default_small"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/waves_lambda_input"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="ChooseReminderLambdaFormulas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lambdaInput"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/settings_icon" />

    <TextView
        android:id="@+id/velocityimage"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/waves_wave_velocity"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/ss"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/waves_wave_period"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sss1" />

    <EditText
        android:id="@+id/periodInput"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/btn_default"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/waves_period_input"
        app:layout_constraintStart_toEndOf="@+id/ss"
        app:layout_constraintTop_toBottomOf="@+id/velocitySourceInput" />

    <TextView
        android:id="@+id/aaa1"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/waves_frequency"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="Calculate"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/frequencySourceInput"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/btn_default"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/waves_frequency_input"
        app:layout_constraintStart_toEndOf="@+id/aaa1"
        app:layout_constraintTop_toBottomOf="@+id/periodInput" />

    <EditText
        android:id="@+id/velocityInput"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/btn_default"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/waves_wave_velocity_input"
        app:layout_constraintStart_toEndOf="@+id/velocityimage"
        app:layout_constraintTop_toBottomOf="@+id/lambdaInput" />

</androidx.constraintlayout.widget.ConstraintLayout>